tests/error/modules_src_no_project.vibe
// ERROR: src. imports require a vibe.toml project
use src.foo.bar

fn main() -> i32 {
    return 0
}
